# crypto_assignments

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  block_data.db  index.js  package-lock.json  package.json
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
rust-ingestion/: Cargo.toml  Dockerfile  block_data.db
rust-ingestion/src/: main.rs
