[package]
name = "rust-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.15"    # To interact with Bitcoin Core RPC
tokio = { version = "1", features = ["full"] }  # For async functionality
rusqlite = "0.26"           # For interacting with SQLite
dotenv = "0.15"             # For managing environment variables
